	2. LevelName function added
	3. reimplement the output of spectra data to better distinguish
	   different type of transitions.
	4. make the coulomb-born contribution to collisional excitation
	   more robust.
	5. added Gaussian electron energy distribution to simulate EBIT
	   beam.
	6. improve the integration routine for rate coefficients.
	7. make the RateTable output more useful.
	
Version 0.7.0, 02/06/2002
	1. add endian swapping in dbase.c and crm.c
	2. implement extrapolation on recombined states.
	3. using Seaton's method (MNRAS 119, 81) to extrapolate RR rates
	4. adding the ionization balance calculation of Arnaud&Raymond.
	5. fix a bug in the reinitialization of radial.c
	6. implement ConfigEnergy() to adjust the level energies.

Version 0.6.9, 01/20/2002
	1. improve the atom module.
	2. updated demo scripts for the new version. added the FeL 
	   demo scripts to calculate the FeL spectrum.
	3. changed the default QkMode for excitation to EXACT.
	4. added SetAbund routine to CRM.

Version 0.6.8, 01/14/2002
	1. use setup.py script to install the python interface. 
	   successfully built under Windows with Cygwin installed.
	2. implement binary output, and its conversion to ASCII format.
	3. changed the argument order of *Table routines, and the routine
	   Structure. The first argument of these routines are now always 
	   the output file name. The routine "LevelTable" is removed. 
	   The file name for the energy levels are now supplied to the 
	   routine "Structure" as the first argument. Several "Structure"
	   calls may share the same output file.
	4. implement ATOM class in "pfac.atom" module. wrote the function
	   "pfac.atom.atomic_data()" for systematic calculation of all
	   K-shell and L-shell processes.
	5. fix a bug in RR, which produced nonsence for n > 10, when
	   hydrogenic approximation is used for them.
	6. implement a collisional radiative model for the construction
	   of spectra. It is implemented in a separate python module 